--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 package-lock.json
 
+# Diagnostic reports (https://nodejs.org/api/report.html)
 node_modules
 dist
 dist-ssr
